# SimpleLang

./: CMakeLists.txt
include/: JIT.h  lexExtern.h  parser.h
src/: CMakeLists.txt  driver.cpp  lexer.cpp  parser.cpp
